from sqlalchemy import Column, Integer, String, DateTime, ForeignKey, Text
from sqlalchemy.orm import relationship
from sqlalchemy.ext.declarative import declarative_base

Base = declarative_base()

class Book(Base):
    __tablename__ = 'books'

    id = Column(Integer, primary_key=True)
    title = Column(String(255))
    author = Column(String(255))
    price = Column(Integer)
    created_at = Column(DateTime)
    updated_at = Column(DateTime)
    reviews = relationship('Review', back_populates='book')
    tags = relationship('Tag', secondary='book_tag', back_populates='books')

class Tag(Base):
    __tablename__ = 'tags'

    id = Column(Integer, primary_key=True)
    name = Column(String(255))
    description = Column(String(255))
    created_at = Column(DateTime)
    updated_at = Column(DateTime)
    books = relationship('Book', secondary='book_tag', back_populates='tags')

class Review(Base):
    __tablename__ = 'reviews'

    id = Column(Integer, primary_key=True)
    book_id = Column(Integer, ForeignKey('books.id'))
    reviewer_name = Column(String(255))
    content = Column(Text)
    rating = Column(Integer)
    created_at = Column(DateTime)
    updated_at = Column(DateTime)
    book = relationship('Book', back_populates='reviews')

class BookTag(Base):
    __tablename__ = 'book_tag'

    id = Column(Integer, primary_key=True)
    book_id = Column(Integer, ForeignKey('books.id'))
    tag_id = Column(Integer, ForeignKey('tags.id'))
    created_at = Column(DateTime)
    updated_at = Column(DateTime)
