@startuml

entity Book {
    + id(PK)
    --
    - title: string
    - author: string
    - price: int
    - created_at: datetime
    - updated_at: datetime
}

entity Tag {
    + id(PK)
    --
    - name: string
    - description: string
    - created_at: datetime
    - updated_at: datetime
}

entity Review {
    + id(PK)
    + book_id(FK)
    --
    - reviewer_name: string
    - content: string
    - rating: int
    - created_at: datetime
    - updated_at: datetime
}

entity Book_Tag {
    + book_id(FK)
    + tag_id(FK)
    --
    - created_at: datetime
    - updated_at: datetime
}

Book ||--o{ Review
Book ||--o{ Book_Tag
Tag ||--o{ Book_Tag

@enduml
